# naneos-upload-tray

./: .gitignore  README.md  main.py  naneos_upload_tray.spec  pyproject.toml
img/: naneos_icon.icns
src/: single_instance.py  toast.py
